[gd_scene load_steps=8 format=3 uid="uid://xmku6l3hmtfs"]

[ext_resource type="Script" uid="uid://ddxa5a7rw8u6f" path="res://Scripts/winner_scene.gd" id="1_od86f"]
[ext_resource type="Texture2D" uid="uid://ckb4348v5jhtp" path="res://Graphics/Blank_Background.png" id="2_umhqd"]
[ext_resource type="Texture2D" uid="uid://dafvl41jnt5ah" path="res://Graphics/Winner_Banner.png" id="3_e1jxh"]
[ext_resource type="Texture2D" uid="uid://bkppe5pch2tgp" path="res://Graphics/Next_Button_Image.png" id="5_o4sic"]
[ext_resource type="Texture2D" uid="uid://djy06unt0wpf8" path="res://Graphics/Score_Area.png" id="7_gkdef"]
[ext_resource type="SystemFont" uid="uid://b7agjpi0kc4br" path="res://Resources/system_fonts.tres" id="8_mebw8"]

[sub_resource type="Environment" id="Environment_1xil7"]
background_mode = 3
glow_enabled = true
glow_hdr_threshold = 1.5

[node name="WinnerScene" type="Node2D"]
script = ExtResource("1_od86f")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1xil7")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 640.0
offset_bottom = 480.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_umhqd")
metadata/_edit_lock_ = true

[node name="WinnerBanner" type="Sprite2D" parent="."]
position = Vector2(320, 104)
texture = ExtResource("3_e1jxh")

[node name="NextButton" type="Area2D" parent="."]
position = Vector2(224, 368)
metadata/_edit_group_ = true

[node name="NextButtonImage" type="Sprite2D" parent="NextButton"]
position = Vector2(96, 32)
texture = ExtResource("5_o4sic")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="NextButton"]
position = Vector2(-2, 0)
polygon = PackedVector2Array(10, 4, 40, 21, 40, 5, 97, -1, 100, 16, 116, -2, 128, 10, 135, 0, 146, 6, 189, 3, 190, 18, 180, 18, 181, 55, 155, 59, 154, 41, 140, 61, 127, 48, 120, 60, 104, 55, 105, 51, 63, 63, 30, 47, 30, 59, 12, 62)

[node name="ScoreArea" type="Sprite2D" parent="."]
position = Vector2(320, 256)
texture = ExtResource("7_gkdef")

[node name="InfoLabel1" type="Label" parent="."]
offset_left = 160.0
offset_top = 200.0
offset_right = 312.0
offset_bottom = 226.0
theme_override_fonts/font = ExtResource("8_mebw8")
text = "Number of moves : "
horizontal_alignment = 2

[node name="InfoLabel2" type="Label" parent="."]
offset_left = 160.0
offset_top = 224.0
offset_right = 334.0
offset_bottom = 250.0
theme_override_fonts/font = ExtResource("8_mebw8")
text = "Total Time : "
horizontal_alignment = 2

[node name="InfoLabel3" type="Label" parent="."]
offset_left = 160.0
offset_top = 248.0
offset_right = 334.0
offset_bottom = 274.0
theme_override_fonts/font = ExtResource("8_mebw8")
text = "Timer Bonus : "
horizontal_alignment = 2

[node name="InfoLabel4" type="Label" parent="."]
offset_left = 160.0
offset_top = 288.0
offset_right = 334.0
offset_bottom = 314.0
theme_override_fonts/font = ExtResource("8_mebw8")
text = "Score : "
horizontal_alignment = 2

[node name="LabelScore" type="Label" parent="."]
offset_left = 336.0
offset_top = 288.0
offset_right = 510.0
offset_bottom = 314.0
theme_override_fonts/font = ExtResource("8_mebw8")
text = " 0"

[node name="LabelMoves" type="Label" parent="."]
offset_left = 336.0
offset_top = 200.0
offset_right = 510.0
offset_bottom = 226.0
theme_override_fonts/font = ExtResource("8_mebw8")
text = " 0"

[node name="LabelTime" type="Label" parent="."]
offset_left = 336.0
offset_top = 224.0
offset_right = 510.0
offset_bottom = 250.0
theme_override_fonts/font = ExtResource("8_mebw8")
text = " 0
"

[node name="LabelBonus" type="Label" parent="."]
offset_left = 336.0
offset_top = 248.0
offset_right = 510.0
offset_bottom = 274.0
theme_override_fonts/font = ExtResource("8_mebw8")
text = " 0"

[connection signal="input_event" from="NextButton" to="." method="_on_next_button_input_event"]
[connection signal="mouse_entered" from="NextButton" to="." method="_on_next_button_mouse_entered"]
[connection signal="mouse_exited" from="NextButton" to="." method="_on_next_button_mouse_exited"]
